addons/openerp/static/css/screen.css
/* ... */
#body_form_td {
    padding: 10px 4px 4px;
    border-color: #EAE7E7;
}

/* links */
.button-a {
    height: 12px;
    padding: 1px 10px;
    border: 1px solid #666666;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    box-shadow: 0 1px 0 transparent;
    -moz-box-shadow: 0 1px 0 transparent;
    -webkit-box-shadow: 0 1px 0 transparent;
    background: url(../images/button-a.gif) repeat-x;
    color: #fff;
    white-space: nowrap;
    font-size: 1em;
    font-weight: bold;
    line-height: 18px;
    text-transform: uppercase;
    text-shadow: #6a6969 0 1px 0;
}

#sidebar button {
    float: none;
    display: block;
    margin: 5px auto;
}

.button-a.disable {
    background: darkGray none repeat scroll 0 0;
    color: #8D8D8D;
}

.button-a:hover, .button-a:focus, .button-a:active {
    background: #666666;
}


td.popup_footer .button-a:hover,
table.popup_footer .button-a:hover,
div.popup_footer .button-a:hover
 {
    background: url(../images/button-a.gif) repeat-x;
    border-color: #CCCCCC;
}

div.toolbar .button-a {
    margin: 0 3px 0 0;
}

td.toolbar a.button-a {
    margin: 0 3px 0 0;
}

a.button-b, button.button-b {
    float: left;
    height: 11px;
    padding: 1px 1px 0;
    border: 1px solid;
    border-color: #e5e3e3 #dad9d9 #cccbcb;
    border-radius: 3px;
    -moz-border-radius: 3px;
    -webkit-border-radius: 3px;
    box-shadow: 0 1px 0 transparent;
    -moz-box-shadow: 0 1px 0 transparent;
    -webkit-box-shadow: 0 1px 0 transparent;
    background: url(../images/button-a.gif) 0 -26px repeat-x;
    color: #8d8d8d;
    white-space: nowrap;
    font-size: 1em;
    font-weight: bold;
    line-height: 16px;
    text-transform: uppercase;
    text-shadow: #fff 0 1px 0;
    vertical-align: middle;
    min-width: 99%;
}

a.wizard_button {
	float: left;
	height: 17px;
	margin: 2px 5px;
}

a.wizard_button td {
	padding: 1px;
}

a.button-b:hover,a.button-b:focus,a.button-b:active,
button.button-b:hover,button.button-b:focus,button.button-b:active {
    border-color: #c6c4c4 #aaa9a9 #797878;
    background-position: 0 0;
    text-shadow: #6a6969 0 1px 0;
    color: #fff;
}

a.cta-a {
    float: left;
    padding: 5px 10px;
    border: 1px solid #ccc;
    border-radius: 5px;
    -moz-border-radius: 5px;
    -webkit-border-radius: 5px;
    background: #eeeded url(../images/cta-a.gif) repeat-x;
    box-shadow: 0 1px 0 #fff;
    -moz-box-shadow: 0 1px 0 #fff;
    -webkit-box-shadow: 0 1px 0 #fff;
    color: #8c8c8c;
    font-size: 0.9em;
    text-transform: uppercase;
    font-weight: bold;
    text-shadow: #fff 0 1px 0;
}

a.cta-a:hover,a.cta-a:focus,a.cta-a:active {
    border-color: #aaa;
}

a.cta-a span {
    float: left;
    width: 95px;
    padding: 7px 0 5px 32px;
    background-position: 0 50%;
    background-repeat: no-repeat;
    cursor: pointer;
}

a.cta-a span.download {
    background-image: url(../images/cta-a-icons-download.gif);
    background-position: 3px 50%;
}

a.cta-a span.read {
    background-image: url(../images/cta-a-icons-book.gif);
}

a.cta-a strong {
    display: block;
    color: #393939;
}

/* other */
.button_wid table td {
    padding: 2px;
}

.wrapper {
    overflow: hidden;
    width: 100%;
    padding-top: 3px;
}

.left {
    float: left;
    margin: 0 10px 0 0;
}

.right {
    float: right;
    margin: 0 0 0 10px;
}

.mt10 {
    margin-top: 10px !important;
}

.w50 {
    width: 50% !important;
}
/* SPECIFIC
------------------------------------------- */

